--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<header-component></header-component>
+<macaroons-component></macaroons-component>
+<footer-component></footer-component>
 </body>
 </html>
